--- a/65030226/ส่งงาน.md
+++ b/65030226/ส่งงาน.md
@@ -1,3 +1,3 @@
 ## https://github.com/ironmanwin1/SevenSegment.git
 
-## เป็นการสร้าง componant สำหรับ 7 Segment
+## แก้ไขส่วนของ componant เพื่อเตรียมพร้อมสำหรับการใช้งานครับ
